--- a/LOMV2/LOMV2.csproj
+++ b/LOMV2/LOMV2.csproj
@@ -9,8 +9,10 @@
     <RootNamespace>LOM</RootNamespace>
     <UseWindowsForms>True</UseWindowsForms>
     <ApplicationIcon>exeIcon2.ico</ApplicationIcon>
-    <Version>1.4.0</Version>
+    <Version>2.1.0</Version>
     <PackageIcon>exeIcon2.png</PackageIcon>
+    <FileVersion>2.1.0</FileVersion>
+    <AssemblyVersion>2.1.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
